# Fitscore

./: .gitignore  CMakeLists.txt  FITSCore.vcxproj  FITSCore.vcxproj.filters  assigner.hpp  common.hpp  configuration.cpp  configuration.hpp  envaluator.cpp  envaluator.hpp  fits_core.cpp  globlecontext.hpp  jobs.cpp  jobs.hpp  loader.cpp  loader.hpp  machine.cpp  machine.hpp  models.hpp  mq.hpp  productLine.hpp  shiftbook.hpp  simulator.cpp  simulator.hpp  taskinfo.hpp  tasks.cpp  tasks.hpp  utils.cpp  utils.hpp  voter.cpp  voter.hpp
29943e9c-b49a-4116-ba36-e247bd427bbc/data/: Settings.csv
3rd/rabbitmq-c/: CMakeLists.txt
lib/: jsoncpp.lib  librabbitmq.4.lib  nanomsg.lib
